create pop up cookies

--- a/index.html
+++ b/index.html
@@ -10,15 +10,31 @@
 <body>
     <div class="container">
         <div class="carousel">
-            <div class="image"><span>Simple</span></div>
-            <div class="image"><span>Carousel</span></div>
-            <div class="image"><span>Animation</span></div>
-            <div class="image"><span>With</span></div>
-            <div class="image"><span>Beautiful</span></div>
-            <div class="image"><span>Landscapes</span></div>
-            <div class="image"><span>Follow</span></div>
-            <div class="image"><span>Like</span></div>
-            <div class="image"><span>Comment</span></div>
+            <div class="image"><span>Huracan</span></div>
+            <div class="image"><span>Gallardo</span></div>
+            <div class="image"><span>Huracan</span></div>
+            <div class="image"><span>P1</span></div>
+            <div class="image"><span>P1</span></div>
+            <div class="image"><span>La Ferrari</span></div>
+            <div class="image"><span>La Ferrari</span></div>
+            <div class="image"><span>GTO</span></div>
+            <div class="image"><span>P1</span></div>
+        </div>
+    </div>
+
+    <div class="cookies-msg" id="cookies-msg">
+        <div class="cookies-txt">
+            <p>
+                Este site é hospedado pelo Squarespace, que coleta dados pessoais quando você visita este site, como:
+                Informações sobre o seu browser, rede e aparelho
+                Páginas da web que você visitou antes de chegar a este site
+                Páginas da web que aparecem enquanto você está neste site
+                O seu endereço IP.
+                O Squarespace precisa dos dados para que este site funcione e para proteger e melhorar a plataforma e os serviços. O Squarespace analisa os dados em um formulário não personalizado.
+                </p>
+                <div class="cookies-btn">
+                    <button>Aceitar</button>
+                </div>
         </div>
     </div>
 </body>
