--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
     <title>Sliders</title>
 </head>
 <body>
+    <h1>Top Cars </h1>
     <div class="container">
         <div class="carousel">
             <div class="image"><span>Huracan</span></div>
@@ -21,8 +23,12 @@
             <div class="image"><span>P1</span></div>
         </div>
     </div>
-
+    
     <div class="cookies-msg" id="cookies-msg">
+        <div class="cookies-img">
+            <img src="https://icons.iconarchive.com/icons/martin-berube/food/128/cookie-icon.png" width="48" height="48">
+            <h6>Cookies</h6>
+        </div>
         <div class="cookies-txt">
             <p>
                 Este site é hospedado pelo Squarespace, que coleta dados pessoais quando você visita este site, como:
@@ -33,9 +39,10 @@
                 O Squarespace precisa dos dados para que este site funcione e para proteger e melhorar a plataforma e os serviços. O Squarespace analisa os dados em um formulário não personalizado.
                 </p>
                 <div class="cookies-btn">
-                    <button>Aceitar</button>
+                    <button onclick="aceito()">Aceitar</button>
                 </div>
         </div>
     </div>
+    <script src="cookie.js"></script>
 </body>
 </html>
